--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.6",
         "pestphp/pest": "^3.8",
-        "pestphp/pest-plugin-laravel": "^3.2"
+        "pestphp/pest-plugin-laravel": "^3.2",
+        "recca0120/laravel-erd": "0.4"
     },
     "autoload": {
         "psr-4": {
